# django-jwtauth

./: .coveragerc  .gitignore  LICENSE.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
django_jwtauth/: Pipfile  __init__.py  authentication.py  middleware.py  models.py  settings.py  urls.py  utils.py  verify.py  views.py
django_jwtauth/management/commands/: generate_token.py
django_jwtauth/migrations/: 0001_initial.py  0002_auto_20181024_1539.py
django_jwtauth/templates/oauth/: login_form.html  logout_confirm.html
tests/: models.py  test_authentication.py  test_commands.py  test_middleware.py  test_settings.py  test_user.py  test_utils.py  test_views.py
