[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.md

[tool:pytest]
addopts=--tb=short --strict
testspath = tests

[flake8]
ignore = E501

[pep8]
exclude = .git,__pycache__,venv*
max-line-length = 160

[isort]
skip=.tox
atomic=true
multi_line_output=5
known_standard_library=types
known_third_party=pytest,_pytest,django

[coverage:run]
# NOTE: source is ignored with pytest-cov (but uses the same).
source = .
omit = tests/*,runtests.py,setup.py,django_jwtauth/settings.py
branch = true

[coverage:report]
show_missing = true
skip_covered = true
